--- a/002.org
+++ b/002.org
@@ -208,7 +208,7 @@ The place where they would soon arrive was waiting, with its turned up mud and v
 
 Gog's helpful contribution, which now looked like a monstrous, tired giraffe leaning over the river as if to drink[fn:: But instead was vomiting ferociously.], was in fact /not/ supposed to be leaning over the river, but no matter. It was a structure that was mostly STRUCTURE. Its long, cantilevered, nearly horizontal span was rather tirelessly engineered, with experiments and all, resulting in a lot of triangles and neatly uniform, arm-thick[fn:: No offense, but /their/ arm, not yours.] spans of twist-vine.
 
-Its justifying feature was a relay of split bamboo culverts that made about a five thumb-pinkie diameter[fn:: Bamboo, being well "engineered", can scale even bigger than this. This was not the biggest bamboo available to them (although this was definitely on the larger side), but, yes, it is far larger than anything you may have seen.] channel for water. Big enough for an all-finger child to use as a kind of water slide, which happened only once. All the splicing work had been done expertly, so it was about as water-tight as a stone channel over a rope bridge, but it could /swivel/. It was fed by the river starting about one and half of one boulder-door[fn:: 100]. men upstream.[fn:: As the math is tedious here: about 300 meters. Crec reckoning is covered in the appendix.]
+Its justifying feature was a relay of split bamboo culverts that made about a five pinkie-thumb diameter[fn:: Bamboo, being well "engineered", can scale even bigger than this. This was not the biggest bamboo available to them (although this was definitely on the larger side), but, yes, it is far larger than anything you may have seen.] channel for water. Big enough for an all-finger child to use as a kind of water slide, which happened only once. All the splicing work had been done expertly, so it was about as water-tight as a stone channel over a rope bridge, but it could /swivel/. It was fed by the river starting about one and half of one boulder-door[fn:: 100]. men upstream.[fn:: As the math is tedious here: about 300 meters. Crec reckoning is covered in the appendix.]
 
 The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had a polished, dense, shiny sections at intervals where the oiled oak bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 men length and continuously gave a heavy, ongoing, cold, laminar punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
 
@@ -422,13 +422,17 @@ One rock that he had only touched with his toe, and then reconsidered, moving on
 
 The oddly uniform, oddly oval, oddly beautiful-on-its own stone had been split in two by a perfectly flat planer separation that Gog had to repeatedly swear there was no hint of before the audible crack.
 
-Instantly the two men felt like they were the caretakers of one of the most wondrous objects anyone had ever seen[fn:: They would have sought traffic cones and bright black-yellow tape if they knew of such.]. Together they first scuttled along the slight grade, one on either side, and then stopped and knelt on one knee to look.
+Instantly the two men felt like they were the caretakers of one of the most wondrous objects anyone had ever seen[fn:: They would have sought traffic cones and bright black-yellow tape if they knew of such.]. From each side, both of them scuttled downward along the slight grade toward the stone and knelt on one knee to look.
 
-The inside was just visible and it was apparent that it was as uniform, smooth, and shiny as a puddle on a very still and quiet morning[fn:: Ideal to check your teeth for signs of breakfast.]. They beheld a smooth, uniform, grey croc egg, split long ways, exactly.
+The inside was just visible and it was apparent that it was as uniform, smooth, and shiny as a puddle on a very still and quiet morning[fn:: Ideal to check your teeth for signs of breakfast.].
 
-Peering inside, between the gap, to see exactly what was there was frustratingly hard, as the crack was no more than a few leaves in breadth.
+They beheld a smooth, uniform, grey egg-shaped stone about 3 pinkie-thumb on its longest axis, split long ways, exactly.
 
-"It did that a good five drop-stone after I just /touched/ it with my toe. It's like it was already under some force and was just waiting to break."
+"It did that a good five drop-stone after I just /touched/ it with my toe. It's like it was already under some force and was just waiting for someone to just touch it and set it off.", said Gog.
+
+"Amazing.", Grav said not even aware he was responding, still staring.
+
+Peering inside, between the gap, to see exactly what was there was frustratingly hard, as the crack was no more than a few leaves in breadth. A nearby hand mirror helped some with the light, but it glittered so loudly on the inside that the line made by the crack was more or less just a whiteish-blue and solid glow when lit, and black when not..
 
 "We /have/ to pick this thing up and some how check it out, but I am terrified that we'll break something inside that is likely to be a once-in-life find.", Grav said while thinking. "You know... that thing is /heavy/ I remember it specifically, admiring how smooth and perfect it is. I had to give it an extra good heave, but it managed to fly a bit high, despite my instincts and landed here with a very solid 'crack'. And /that/ didn't do this. Your /toe/ did?"
 
