--- a/002.org
+++ b/002.org
@@ -422,7 +422,7 @@ One rock that he had only touched with his toe, and then reconsidered, moving on
 
 The oddly uniform, oddly oval, oddly beautiful-on-its own stone had been split in two by a perfectly flat planer separation that Gog had to repeatedly swear there was no hint of before the audible crack.
 
-Instantly the two men felt like they were the caretakers of one of the most wondrous objects anyone had ever seen[fn:: They would have sought traffic cones and bright black-yellow tape if they knew of such.]. From each side, both of them scuttled downward along the slight grade toward the stone and knelt on one knee to look.
+Already the two men knew they were the caretakers of one of the most wondrous objects anyone had ever seen[fn:: They would have sought traffic cones and bright black-yellow tape if they knew of such.]. From each side, both of them scuttled downward along the slight grade toward the stone and knelt on one knee to look.
 
 The inside was just visible and it was apparent that it was as uniform, smooth, and shiny as a puddle on a very still and quiet morning[fn:: Ideal to check your teeth for signs of breakfast.].
 
