--- a/Appendix.org
+++ b/Appendix.org
@@ -46,6 +46,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- Someone speculates that the outer perimiter crack of the stick-stone/devil-fish-stone is so sharp because the outside had been polished by Nature. Otherwise it would be jagged. Reproducible of course.
 - Capitalization of Workers explained: they got together, decided to spring the union thing on G&G, who were more than prepared. The workers would shout, "THE WORKERS!" at the end of every other utterance (but only when appearing as a group) and so after literally hours of negotiation, the compromised on having their so-called superiors refer to them as a group in the same way: No matter in what context, when refering to the workers, according to the bylaws of G&G, had to make an effort to enthusiastically shout, e.g. "Hey, Guff, some of /THE WORKERS/ are late this dawn. Do you know of any reason?" All were satisfied with the arrangement.
 - The reason they keep fucking up on standardizing certain measurements is that they literally have not yet thought of the possibility of these things varying. Crec were Crec.
 - At some point, the sluice encounters a low cliff on the riverbank. They find /booones/!
