--- a/002.org
+++ b/002.org
@@ -430,9 +430,9 @@ They beheld a smooth, uniform, grey egg-shaped stone about 3 pinkie-thumb on its
 
 "It did that a good five drop-stone after I just /touched/ it with my toe. It's like it was already under some force and was just waiting for someone to just touch it and set it off.", said Gog.
 
-"Amazing.", Grav said not even aware he was responding, still staring.
+"Amazing.", Grav said at a whisper, not even aware he was responding, and still staring.
 
-Peering inside, between the gap, to see exactly what was there was frustratingly hard, as the crack was no more than a few leaves in breadth. A nearby hand mirror helped some with the light, but it glittered so loudly on the inside that the line made by the crack was more or less just a whiteish-blue and solid glow when lit, and black when not..
+Peering inside, between the gap, to see exactly what was there was frustratingly hard, as the crack was no more than a few leaves in breadth. A nearby hand mirror helped some with the light, but it glittered so loudly on the inside that the line made by the crack was more or less just a whiteish-blue and solid glow when lit, and black when not.
 
 "We /have/ to pick this thing up and some how check it out, but I am terrified that we'll break something inside that is likely to be a once-in-life find.", Grav said while thinking. "You know... that thing is /heavy/ I remember it specifically, admiring how smooth and perfect it is. I had to give it an extra good heave, but it managed to fly a bit high, despite my instincts and landed here with a very solid 'crack'. And /that/ didn't do this. Your /toe/ did?"
 
