--- a/002.org
+++ b/002.org
@@ -436,7 +436,7 @@ Peering inside, between the gap, to see exactly what was there was frustratingly
 
 "We /have/ to pick this thing up and some how check it out, but I am terrified that we'll break something inside that is likely to be a once-in-life find.", Grav said while thinking. "You know... that thing is /heavy/ I remember it specifically, admiring how smooth and perfect it is. I had to give it an extra good heave, as you'd guess, but it managed to fly a bit high, despite my instincts and landed here with a very solid 'crack'. And /that/ didn't do this. Your /toe/ did? I was sure I'd have to scurry out and throw it the rest of the way. It was like it had wings."
 
-"We should maybe start by removing some silt? Maybe grab a few gourd of water while we work it away. Go get some, would ya? Our drinking gourds are just upstream. I mean, yeah... I'm like you; the suspense is killing me.", said Gog.
+"We should maybe start by removing some silt? Maybe pour a few gourd of water on it while we work? Go get some, would ya? Our drinking gourds are just upstream. I mean, yeah... I'm like you; the suspense is killing me.", said Gog.
 
 Grav returned with the two gourd[fn:: Their combined capacity was more like 7 gourd. Do you wonder why a drinking gourd would be three and a half standard gourds in capacity? They were inconsistent, what can one say?] of water which he gently poured over the the rock while Gog cleared the silt. They both knew that, whatever's inside, it's not going to be bothered by some water. Nothing that has spent the whole before-and-after-questions in the earth was bothered much by water. They repeated this with an all-finger or so of gourd.
 
