--- a/002.org
+++ b/002.org
@@ -438,7 +438,7 @@ Peering inside, between the gap, to see exactly what was there was frustratingly
 
 "We should maybe start by removing some silt? Maybe pour a few gourd of water on it while we work? Go get some, would ya? Our drinking gourds are just upstream. I mean, yeah... I'm like you; the suspense is killing me.", said Gog.
 
-Grav returned with the two gourd[fn:: Their combined capacity was more like 7 gourd. Do you wonder why a drinking gourd would be three and a half standard gourds in capacity? They were inconsistent, what can one say?] of water which he gently poured over the the rock while Gog cleared the silt. They both knew that, whatever's inside, it's not going to be bothered by some water. Nothing that has spent the whole before-and-after-questions in the earth was bothered much by water. They repeated this with an all-finger or so of gourd.
+Grav returned with the two gourds[fn:: Their combined capacity was more like 7 gourd. Do you wonder why a drinking gourd would be three and a half standard gourds in capacity? They were inconsistent, what can one say?] filled with water which he gently poured over the the rock while Gog cleared the silt. They both knew that, whatever's inside, it's not going to be bothered by some water. Nothing that has spent the whole before-and-after-questions in the earth was bothered much by water. They repeated this with an all-finger or so of gourd.
 
 Another thing a rock of any kind can tolerate is some gentle nudging with a green twig. Grav explored the parameter of the crack making mental notes. "I'm going to say it: It's exactly like there is a yolk in there."
 
