--- a/002.org
+++ b/002.org
@@ -444,7 +444,7 @@ Another thing a rock of any kind can tolerate is some gentle nudging with a gree
 
 "Yum!", said Gog. "Maybe we should just secure it in this position and take it back to the office."
 
-"I suppose. Some bump or disappointment or other is inevitable. Let's do that and knock out the ceiling. I think it's worth it for this.", said Grav.
+"I suppose. Some bump or disappointment or other is inevitable. Let's do that and knock out some of the ceiling. I think it's worth it for this.", said Grav.
 
 "I reluctantly agree with you.", said Gog.
 
