--- a/002.org
+++ b/002.org
@@ -450,7 +450,7 @@ Another thing a rock of any kind can tolerate is some gentle nudging with a gree
 
 Having gently wedge in some green, spongy twigs into the gap and wrapped the whole "egg" with twist-vine, they used yet more twist-vine to lash the stone to a couple of poles to make a kind of litter.
 
-They both raised the stone to hip hight slowly, expecting another strange surprise underneath. It turned out to be just more stone and mud, unsurprisingly, as this was not its...birth place, so to speak.
+They both raised the stone to hip hight slowly, expecting another strange surprise underneath. It turned out to be just more stone and mud, unsurprisingly, as this was not its birth place, so to speak.
 
 They worked their way up and down slopes, trying to keep things gentle and smooth, if not always level.
 
