--- a/002.org
+++ b/002.org
@@ -454,7 +454,7 @@ They both raised the stone to hip hight slowly, expecting another strange surpri
 
 They worked their way up and down slopes, trying to keep things gentle and smooth, if not always level.
 
-Midway through the clearing between the closest of the worked river basin and the beginning of their office entranceway[fn:: which was 15 man long and had a side passage or two along the way: Office supplies, miscalanoius.], both sticks suddenly and unexpectedly snapped where they came closest to the rock. The precious bundle was allowed to fall a good half-man onto an inconveniently placed sharp rock.
+Midway through the clearing between the closest of the worked river basin and the beginning of their office entranceway[fn:: which was 15 man long and had a side passage or two along the way: Office supplies, miscalanoius.], both sticks suddenly and unexpectedly snapped where they came closest to the rock. The precious bundle was allowed to fall a good half-man onto an inconveniently placed sharp rock (which was probably not even necessary.)
 
 There was no longer any need to discuss how to get the thing open and which long and painful protocols to follow, the stone egg gave up its secrets right there on the muddy clearing, both halves rocking almost mockingly for a good few drop-stone, the "yolk" sliding back and forth on the smooth inner surface, refusing to fall back into its form-fitting void /or/ fall of the edge.
 
