--- a/002.org
+++ b/002.org
@@ -456,7 +456,7 @@ They worked their way up and down slopes, trying to keep things gentle and smoot
 
 Midway through the clearing between the closest of the worked river basin and the beginning of their office entranceway[fn:: which was 15 man long and had a side passage or two along the way: Office supplies, miscalanoius.], both sticks suddenly and unexpectedly snapped where they came closest to the rock. The precious bundle was allowed to fall a good half-man onto an inconveniently placed sharp rock (which was probably not even necessary.)
 
-There was no longer any need to discuss how to get the thing open and which long and painful protocols to follow, the stone egg gave up its secrets right there on the muddy clearing, both halves rocking almost mockingly for a good few drop-stone, the "yolk" sliding back and forth on the smooth inner surface, refusing to fall back into its form-fitting void /or/ fall of the edge.
+There was no longer any need to discuss how to get the thing open and which long and painful protocols to follow. The great stone egg gave up its secrets right there on the muddy clearing, both halves rocking almost mockingly for a bit with the "yolk" sliding back and forth on the smooth inner surface, free from its perfect cradle, refusing to fall back in place, or over the verge.
 
 The two men, useless sticks in hand, stared silently as the two halves came to a standstill.
 
