--- a/002.org
+++ b/002.org
@@ -462,11 +462,11 @@ The two men, useless sticks in hand, stared silently as the two halves came to a
 
 They stared some more.
 
-"It looks like a rock-stick.", said Gog.
+"It looks like a rock-stick.", said Gog, with an involulentary vomiting guffaw that made a fart sound.
 
-"Uh. Yeah. Like, a lot."
+"Uhhm... Yeah. Like, a lot.", said Grav under his breath.
 
-They continued to stand there, smiling looking at the strange scene before them, shaking their heads[fn:: note xxx on head shaking?].
+They continued to stand there, smiling looking at the strange scene before them, shaking their heads[fn:: It meant "disbelief" and it involved moving the head, but it's not your head movement gesture. This was like the gentle head bob of an unaware game bird on the lookout for beetles and mates but otherwise without any kind of agenda for the time being. It also meant 'yes', which is a gesture easily picked up by children as these kind of birds were always around settled places, despite their eggs being stolen and getting killed violently at random. 'Yes, yes. All is good for /now/', the birds seemed to always think when not in a panic, which was their only other state.].
 
 And for a while after the rocking stopped. They took turns making the involuntary, soft, high gurgle of the dumbfounded.
 
