--- a/002.org
+++ b/002.org
@@ -468,7 +468,7 @@ They stared some more.
 
 They continued to stand there, smiling looking at the strange scene before them, shaking their heads[fn:: It meant "disbelief" and it involved moving the head, but it's not your head movement gesture. This was like the gentle head bob of an unaware game bird on the lookout for beetles and mates but otherwise without any kind of agenda for the time being. It also meant 'yes', which is a gesture easily picked up by children as these kind of birds were always around settled places, despite their eggs being stolen and getting killed violently at random. 'Yes, yes. All is good for /now/', the birds seemed to always think when not in a panic, which was their only other state.].
 
-And for a while after the rocking stopped. They took turns making the involuntary, soft, high gurgle of the dumbfounded.
+And for a while after the rocking stopped they took turns making the involuntary, soft, high gurgle of the dumbfounded.
 
 "Now, this creates at least one serious dilemma.", said Gog. Grav watched him as he spoke with a face that said, 'I know, I know'. "This is, as hoped for, the biggest value-stone that we or possibly...probably anyone has ever seen. And yet, it looks like a big, fat boulder-stump."
 
