--- a/002.org
+++ b/002.org
@@ -474,9 +474,9 @@ And for a while after the rocking stopped they took turns making the involuntary
 
 Grav snorted despite the unreal circumstances. Neither have seen anything remotely like this in either size or character. Character carrying a lot of the weight in this case.
 
-"See, if we show this..."
+"Now see, if we show this..."
 
-"Obviously I get it, Gog."
+"Obviously I know, Gog."
 
 "Maybe if we just play dumb? Maybe if we dress it up?"
 
