--- a/002.org
+++ b/002.org
@@ -484,11 +484,15 @@ Grav snorted despite the unreal circumstances. Neither have seen anything remote
 
 Both men laughed.
 
-Grav was holding it in his hand in the least sexual way he could manage, inspecting it with wonder. It was a scapolite[fn:: They call this iris-stone, as it sometimes looks in color and richness the medium-brown iris that is universal among them.] about one and one half of one pinkie-thumb long,  ...penis that was plausibly not shaped by human hands. It had the right amount of "organicness" to it that might cause one to think, rather, it instead looks more like "the real thing", but its shape was also distorted in some places and ways that led one to think just long enough: "nah." But then again: "yes, somewhat."
+Grav was holding it in his hand in the least sexual way he could manage, inspecting it with wonder. It was a scapolite[fn:: They call this iris-stone, as it sometimes looks in color and richness the medium-brown iris that is universal among them.] about one and one half of one pinkie-thumb long,  ...penis that, could also, for the less banana-minded pass for something else. It was almost a kind of purity test in its ambiguity.
 
 It was something that /might/ be benign looking enough to show grandmother, if you coily avoided her eye for the first few drop-stone after revelation, looking at your fingernails, say.
 
-It was a kind of crypto-stick, for it did lack rocks. And was blunt at the "bottom", as though this was exactly what the crystal did: make a big human penis, and then stop abruptly when done. Being wet and muddy as described, it fell and stuck halfway into the mud when Grav made the mistake of trying to hold it by its "base" and relying only on his vice-like grip on muddy stone. This could have been seen as a kind of warning to future handlers.
+It was a kind of crypto-stick, for it did lack rocks. And was blunt at the "bottom", as though this was exactly what this particular unlikely combination of crystals did: Form a big human penis, and then stop abruptly when the penis part was obviously over with.
+
+Its enclosing "egg" was a sort of geode that was dark blue semi-transparent crystal with sparkling silver veins running from the void to the edge of the stone as though "radiating" from the middle. Like the penis had kind of starburst of patterns eminating from it that could only be vaugly glimpsed by breaking the stone, which had been done already by Nature. All who saw it decided it needed no more exploratory cracks.
+
+Being wet and muddy as described, it fell and stuck halfway into the mud when Grav made the mistake of trying to hold it by its "base" and relying only on his vice-like grip on muddy stone. This could have been seen as a kind of warning to future handlers.
 
 "Stupid-ham, you're going to break it.", said Gog.
 
