--- a/002.org
+++ b/002.org
@@ -484,7 +484,7 @@ Grav snorted despite the unreal circumstances. Neither have seen anything remote
 
 Both men laughed.
 
-Grav was holding it in his hand in the least sexual way he could manage, inspecting it with wonder. It was a scapolite[fn:: They call this iris-stone, as it sometimes looks in color and richness the medium-brown iris that is universal among them.] about one and one half of one pinkie-thumb long,  ...penis that, could also, for the less banana-minded pass for something else. It was almost a kind of purity test in its ambiguity.
+Grav was holding it in his hand in the least sexual way he could manage, inspecting it with wonder. It was a scapolite[fn:: They call this iris-stone, as it sometimes looks in color and richness like the medium-brown iris that is universal among Crec eyes, except for the cursed.]...penis, about one and one half of one pinkie-thumb long that, for the less banana-minded, might pass for something else. It was almost a kind of purity test in its ambiguity.
 
 It was something that /might/ be benign looking enough to show grandmother, if you coily avoided her eye for the first few drop-stone after revelation, looking at your fingernails, say.
 
