--- a/002.org
+++ b/002.org
@@ -490,7 +490,7 @@ It was something that /might/ be benign looking enough to show grandmother, if y
 
 It was a kind of crypto-stick, for it did lack rocks. And was blunt at the "bottom", as though this was exactly what this particular unlikely combination of crystals did: Form a big human penis, and then stop abruptly when the penis part was obviously over with.
 
-Its enclosing "egg" was a sort of geode that was a semi-transparent dark blue crystal with sparkling silver veins running from the void to the edge of the stone as though "radiating" from the middle. Like the penis had kind of starburst of patterns eminating from it that could only be vaugly glimpsed by breaking the stone, which had been done already by Nature. All who saw it decided it needed no more exploratory cracks.
+Its enclosing "egg" was a sort of geode that was a semi-transparent dark blue crystal with sparkling silver veins running from the void at its center, outward to the edge of the stone as though "radiating" from the middle. Like the penis had kind of starburst of patterns eminating from it that could only be vaugly glimpsed by breaking the stone, which had been done already by Nature. All who saw it decided it needed no more exploratory cracks.
 
 Being wet and muddy as described, it fell and stuck halfway into the mud when Grav made the mistake of trying to hold it by its "base" and relying only on his vice-like grip on muddy stone. This could have been seen as a kind of warning to future handlers.
 
