--- a/002.org
+++ b/002.org
@@ -502,6 +502,8 @@ Being wet and muddy as described, it fell and stuck halfway into the mud when Gr
 
 "What the Afterlife, brother. I am legitimately weirded out by this thing.", worried Grav aloud.
 
+yyy
+
 "Well," Gog said, "I am just going to follow a xxxhypatheticalxxx here, a xxxthought-experxxx...what if we just totally play dumb, all day, every day[fn:: Pronounced 'dakom!'] and never let on. So we found a lifetime value-stone...so what? Do you expect Father-Brother-Wife Kham to say to us, 'Hey, boys, don't you think this looks like a big stone-branch?'"
 
 "Heh, that's just crazy enough to work, brother.", said Grav.
