--- a/002.org
+++ b/002.org
@@ -502,17 +502,19 @@ Being wet and muddy as described, it fell and stuck halfway into the mud when Gr
 
 "What the Afterlife, brother. I am legitimately weirded out by this thing.", worried Grav aloud.
 
-yyy
+"Well," Gog said, "I am just going to follow a kind of crazy-benefit-think predict-tool here. Criticize not my hurried handywork[fn:: Don't judge.]. What if we just totally play dumb, all day, every day[fn:: Pronounced 'dakom!'] and never let on.
 
-"Well," Gog said, "I am just going to follow a xxxhypatheticalxxx here, a xxxthought-experxxx...what if we just totally play dumb, all day, every day[fn:: Pronounced 'dakom!'] and never let on. So we found a lifetime value-stone...so what? Do you expect Father-Brother-Wife Kham to say to us, 'Hey, boys, don't you think this looks like a big stone-branch?'"
+So we found a lifetime value-stone. So what? Do you expect Father-Brother-Wife Kham to say to us, 'Hey, boys, don't you think this looks like a big stone-branch?'"
 
 "Heh, that's just crazy enough to work, brother.", said Grav.
 
 "Exactly!"
 
-After washing the whole works in the river and scrubbing lightly with the finest silt they could find, they let the three pieces dry on the rocks for a palm or two and talked.
+They decided that lining the cradle with two of the thinest leaves they could find and packing the whole thing as it was found, more or less, was the safest way for it to travel. After lightly scrubbing the triune of mysterious stone with the finest silt they could find, applied with a handfull of soft, green leaves, they rinsed all in a clean part of the river and let the pieces dry on the open floor for a palm or two and talked.
 
-"Let's just decide right here and now that neither of us are going to crack. It's like a secret you're sworn to keep, except in this case you are obliged to always keep up an act: We have no idea it looks like a grown-man's pebble-twig. We think it looks more like a kind of fish we saw once; exactly like that kind of fish! We're biased in that direction. We are deaf to the innuendos of even our closest-circle.", said Gog with some certainty.
+"Let's just decide right here and now that neither of us are going to crack. It's like a secret you're sworn to keep, except in this case you are obliged to always keep up an act: We have no idea it looks like a grown-man's massive pebble-twig. We think it looks more like a kind of fish we saw once; exactly like that kind of fish!
+
+We're hopelessly biased in that direction. We are deaf to the innuendos of even our closest-circle.", said Gog with some certainty.
 
 "That's hard." Grav watched Gog nod his head up and down. "I mean with, say Father-Brother Verk, that's easy. With those all-finger-and boys that like to ask for feedback on their banana-language that corner us just out of town[fn:: The Crec's concept of 'town' was any place where you stopped seeing occupied caves for a bit. When you suddenly realized this, you were out-of-town. It's a concept that has the subconscious as part of its definition.]. They're always guffawing and, despite myself, I find myself wanting to one-up them with the banana-juggling[fn:: Shit talk, smack talk. See the appendix about 'yo mama' jokes.]."
 
