--- a/002.org
+++ b/002.org
@@ -504,7 +504,7 @@ Being wet and muddy as described, it fell and stuck halfway into the mud when Gr
 
 "Well," Gog said, "I am just going to follow a kind of crazy-benefit-think predict-tool here. Criticize not my hurried handywork[fn:: Don't judge.]. What if we just totally play dumb, all day, every day[fn:: Pronounced 'dakom!'] and never let on.
 
-So we found a lifetime value-stone. So what? Do you expect Father-Brother-Wife Kham to say to us, 'Hey, boys, don't you think this looks like a big stone-branch?'"
+So we found a lifetime value-stone. So what? Do you expect Father-Brother-Wife Kham to say to us, /Hey, boys, don't you think this looks like a big, rigid stone-branch?/"
 
 "Heh, that's just crazy enough to work, brother.", said Grav.
 
