--- a/002.org
+++ b/002.org
@@ -512,7 +512,7 @@ So we found a lifetime value-stone. So what? Do you expect Father-Brother-Wife K
 
 They decided that lining the cradle with two of the thinest leaves they could find and packing the whole thing as it was found, more or less, was the safest way for it to travel. After lightly scrubbing the triune of mysterious stone with the finest silt they could find, applied with a handfull of soft, green leaves, they rinsed all in a clean part of the river and let the pieces dry on the open floor for a palm or two and talked.
 
-"Let's just decide right here and now that neither of us are going to crack. It's like a secret you're sworn to keep, except in this case you are obliged to always keep up an act: We have no idea it looks like a grown-man's massive pebble-twig. We think it looks more like a kind of fish we saw once; exactly like that kind of fish!
+"Let's just decide right here and now that neither of us are going to crack. It's like a secret you're sworn to keep, except in this case you are obliged to always keep up an act: We have no idea it looks like the massive, fully grown caveman's throbbing pebble-twig. We think it looks more like a kind of fish we saw once; exactly like that kind of fish!
 
 We're hopelessly biased in that direction. We are deaf to the innuendos of even our closest-circle.", said Gog with some certainty.
 
