--- a/002.org
+++ b/002.org
@@ -516,7 +516,7 @@ They decided that lining the cradle with two of the thinest leaves they could fi
 
 We're hopelessly biased in that direction. We are deaf to the innuendos of even our closest-circle.", said Gog with some certainty.
 
-"That's hard." Grav said, watching Gog bob his head up and down making a sadist's smile. "I mean with, say Father-Brother Verk, that's easy. With those all-finger-and[fn:: "Tween"] boys that like to ask for feedback on their banana-language that often corner us just out of town[fn:: The Crec's concept of 'town' was any place where you stopped seeing occupied caves for a bit. When you suddenly realized this, you were out-of-town. It's a concept that has the subconscious as part of its definition.]. They're always guffawing and, despite myself, I find myself wanting to one-up them with the banana-juggling[fn:: Shit talk, smack talk. See the appendix about 'yo mama' jokes.]."
+"That will be difficult." Grav said, watching Gog bob his head up and down making a sadist's smile. "I mean with, say Father-Brother Verk, that's easy. With those all-finger-and[fn:: "Tween"] boys that like to ask for feedback on their banana-language that often corner us just out of town[fn:: The Crec's concept of 'town' was any place where you stopped seeing occupied caves for a bit. When you suddenly realized this, you were out-of-town. It's a concept that has the subconscious as part of its definition.]. They're always guffawing and, despite myself, I find myself wanting to one-up them with the banana-juggling[fn:: Shit talk, smack talk. See the appendix about 'yo mama' jokes.]."
 
 "Yep, including them.", Gog said, demanding total surrender to the plan.
 
