--- a/002.org
+++ b/002.org
@@ -520,7 +520,7 @@ We're hopelessly biased in that direction. We are deaf to the innuendos of even 
 
 "Yep, including them!", Gog said, demanding total surrender to the plan.
 
-"You shit-pile on it too?[fn:: All boys at some point would have a shit-pile ritual. It's like a pinkie promise, except, to signal the gravity of your oath, would shit on top of a freshly laid shit made by the other boy. It has its parallels in our world. Among men this was said ironically, as all promises made by true cavemen are actual, legitimate promises, rituals aside.]"
+"You scat-pile on it too?[fn:: All boys at some point would have a shit-pile ritual. It's like a pinkie promise, except, to signal the gravity of your oath, would shit on top of a freshly laid shit made by the other boy. It has its parallels in our world. Among men this was said ironically, as all promises made by true cavemen are actual, legitimate promises, rituals aside.]"
 
 "Yep. I'm in. I think it's fun to mount human behavior just for the colliding-stamped aspect of it. Is any of this /wrong/? I mean, I don't think for a second that it is. How, omitting our opinion about what something might look like? We cannot decide not to take sides? Maybe we begrudgingly see a similarity but lots of things in the Forest have that shape."
 
