--- a/002.org
+++ b/002.org
@@ -522,7 +522,7 @@ We're hopelessly biased in that direction. We are deaf to the innuendos of even 
 
 "You scat-pile on it too?[fn:: Nearly all boys, and almost always only boys, at some point would encounter the solemn scat-pile ritual. It's like a pinkie promise except, to signal the gravity of your oath, the boy subject to the oath would shit on top of a freshly laid shit made by the other boy. This was a symbolic way of saying, we are together in this dangerous world and 'I promise'. Scat, human or otherwise, has an intimate part to play in the predator-pray dynamic. /Your/ scat, all by itself, even if long behind you, is always an invitation for a predator to follow. It has its parallels in our world. Among men this was said with a twist of mirth but at the same time seen as a legitimate promise, as all promises made by true cavemen are actual, legitimate promises, rituals or irony aside.]"
 
-"Yep. I'm in. I think it's fun to mount human behavior just for the colliding-stamped aspect of it. Is any of this /wrong/? I mean, I don't think for a second that it is. How, omitting our opinion about what something might look like? We cannot decide not to take sides? Maybe we begrudgingly see a similarity but lots of things in the Forest have that shape."
+"Yep. I'm in. I think it's fun to mount human behavior just for the colliding-stamped aspect of it[fn:: It's fun to fuck with people, even if only for the trainwreck angle.]. Is any of this /wrong/? I mean, I don't think for a second that it is. How, omitting our opinion about what something might look like? We cannot decide not to take sides? Maybe we begrudgingly see a similarity but lots of things in the Forest have that shape."
 
 Gog: "Yep."
 
