--- a/002.org
+++ b/002.org
@@ -528,7 +528,7 @@ Gog: "Yep."
 
 "So, as absurd as everything that has happened in the last 10 palms is, I think we need to focus, as I assume we are caring that sinful bulk back with us.", said Grav.
 
-The two men carefully packed the objects in dense, soft leaves and used (and reused) more twist-vine to secure it into a safe, padded ball as a first step. It was still deeply perplexing that the whole bundle had fallen apart seemingly spontaneously.
+The two men carefully packed the bundle as described, wrapped that with dense, soft leaves and used (and reused) more twist-vine to secure it into a safe, padded ball as a first step. It was still deeply perplexing that the whole bundle had fallen apart seemingly spontaneously.
 
 The then made some heavier twist-vine, with which they suspended the bundle from a sturdy pine trunk with two all-finger passes.
 
