--- a/002.org
+++ b/002.org
@@ -528,13 +528,13 @@ Gog: "Yep."
 
 "So, as absurd as everything that has happened in the last 10 palms is, I think we need to focus, as I assume we are caring that sinful bulk back with us.", said Grav.
 
-The two men carefully packed the bundle as described, wrapped that with dense, soft leaves and used (and reused) more twist-vine to secure it into a safe, padded ball as a first step. It was still deeply perplexing that the whole bundle had fallen apart seemingly spontaneously.
+The two men carefully packed the bundle as described, then wrapped the assembled "egg" in alternating layers of dense, soft leaves and twist-vine, resulting in a safe, padded ball. It was still deeply perplexing that the whole bundle had fallen apart seemingly spontaneously.
 
-The then made some heavier twist-vine, with which they suspended the bundle from a sturdy pine trunk with two all-finger passes.
+They then made several man of heavier twist-vine, with which they used to suspend the bundle[fn:: The technique they and everyone else they knew used for something like this is what is more or less now known as "macrame".] from a sturdy, springy aspen trunk.
 
-After the men compared mental checklists before leaving, they hurried off toward xxxxx, leaving whatever they could behind.
+The men compared mental checklists before leaving, as was their practice, and hurried off toward Bhorv Zolk, leaving whatever they could behind.
 
-They decided to stash it nearby in one of their plentiful "perfect" locations and make a day out of planning and "presenting" the find to Verk in the optimal way.
+Upon arriving, thoroughly in need of rest and food, they decided to stash it nearby in one of their plentiful "perfect" locations and spend as much time as was necessary discussing plans and minutiae, knowing that any whiff of an open attempt to humiliate Verk would probably mean unspeakable torture both physical and "social" to a degree that both had seen only once or twice, but understood to be about the worst fate a living person can have by any Crec, including them.
 
 And so they did. The entire next day was spent trading and criticizing aspects of all of the aspects of this weird /thing/ they were doing. In their optimism, they decided that, while they may not be able to skip club-drill, they could milk this "penis"[fn:: Only you will be able to appreciate this bit of the author's humor. The Crec had no saying that is adaptable to precisely this joke.] thing in ways that more than made up for it.
 
