--- a/002.org
+++ b/002.org
@@ -538,7 +538,7 @@ Upon arriving, thoroughly in need of rest and food, they decided to stash it nea
 
 And so they did. The entire next day was spent trading and criticizing aspects of all of the aspects of this weird /thing/ they were doing. In their optimism, they decided that, while they may not be able to skip club-drill, they could milk this "penis"[fn:: Only you will be able to appreciate this bit of the author's humor. The Crec had no saying that is adaptable to precisely this joke.] thing in ways that more than made up for it.
 
-As for practicalities, they of course continued to agree, like cavemen, to abide by the mutual decision to play it coy. This was not hard to do, it turned out. Those that "saw it" were shocked into sick-monkey mode, forbidding all of their being from acknowledging the now obvious. Even in front of a couple of cut-ups like Grav and Gog.
+As for practicalities, they of course continued to agree to abide by the mutual decision to play it coy. This was not hard to do, it turned out. Those that "saw it" were shocked into sick-monkey mode, forbidding all of their being from acknowledging the now obvious. Even in front of a couple of cut-ups like Grav and Gog.
 
 They also agreed to just lay the pieces together, on its side with the top stone naturally pressing things together, and let Verk, do the official revealing, an invitation which Verk literally could not conceive of declining.
 
