--- a/002.org
+++ b/002.org
@@ -550,7 +550,7 @@ On the off chance that this was to be underwhelming, Verk tempered his urge to i
 
 All invited were present, introductory remarks made, grateful nods made towards Grav and Gog throughout. The quiet chatter among the adults, some giddy, had died down rapidly with an expert cue from Vert; only a small change in his stance and facial expression.
 
-"It is time, my fellow cavemen.", I sure hope you brought us something grand, Grav and Gog, and we thank you for having the heart to make a gift of this mysterious find to treasury of /The Forest Heroes' Fallen Cavebabies Fund/[fn:: This is a fund enjoyable only by Forest military veterans to help with the care (or funeral, as appropriate), should any of their offspring be injured or killed in a fall, which happened very regularly of course.].
+"It is time, my fellow cavemen! I sure hope you brought us something grand, Grav and Gog, and we thank you for having the heart to make a gift of this mysterious find to treasury of /The Forest Heroes' Fallen Cavebabies Fund/[fn:: This is a fund enjoyable only by Forest military veterans to help with the care (or funeral, as appropriate), should any of their offspring be injured or killed in a fall, which happened very regularly of course.]."
 
 Grav and Gog stood smiling awkwardly. The crowd was too small and close for there to be any idea which direction to face. They felt on display as well, with Verk maybe doling out a bit too much praise to keep the boys' sense of obligation sharp.
 
