--- a/002.org
+++ b/002.org
@@ -554,7 +554,7 @@ All invited were present, introductory remarks made, grateful nods made towards 
 
 Grav and Gog stood smiling awkwardly. The crowd was too small and close for there to be any idea which direction to face. They felt on display as well, with Verk maybe doling out a bit too much praise to keep the boys' sense of obligation sharp.
 
-Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halves apart with a fine, glittering Sky Clam halve[fn:: These were found on the top of nearby /Mnt. Fishes/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the perimeter of the mirror-stone finish he had been assured he would find, among other wonders that he insisted remain a surprise.
+Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halves apart with a fine, glittering Sky Clam halve[fn:: These were found on the top of nearby /Mnt. Fishes/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the perimeter of the mirror-stone-like finish he had been assured he would find, among other wonders that he insisted remain a surprise.
 
 The two men had never felt this kind of intense, surreal terror before. Either their predict-thought was correct, and Verk would not /see/ what was there, or he would immediately see a fine, sparkling, extra-large false-rock-stick that would, should such a thing even exist outside of caveboy talk, be hidden carefully under feet of bat-scat in the very back of one's cave[fn:: Which would keep it quite warm, which no one found out.].
 
